Update and rename hello.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     	<h4>Сайт ГБОУ Школы №141</h4>
     	<h2>Государствнное бюджетное общеобразовательное учреждение ГБОУ Школа №141 имени Героя Советского Союза Рихарда Зорге</h2>
     	<h3>Информация о школе</h3>
-    	Посетите <a href="sch141.mskobr.ru" target="_blank"> официальный сайт школы</a>
+    	Посетите <a href="http://sch141s.mskobr.ru/" target="_blank"> официальный сайт школы</a>
     	<ul>
     		<li><b>Директор школы</b> - Худошин Виталий Валерьевич</li>
+		<img src="director.jpg"/>
     		<li><b>Заместитель директора по воспитательной работе</b> - Кузнецова Светлана Александровна</li>
     	</ul>
     	Расписание уроков 8 "А" класса
@@ -90,7 +91,7 @@
     		</tr>	
     	</table>
     	Контакты:
-    	Официальный сайт ГБОУ Школы №141 - <a href="sch141.mskobr.ru" target="_blank">;
+    	Официальный сайт ГБОУ Школы №141 - <a href="http://sch141s.mskobr.ru/" target="_blank">;
     	Группа ВК - <a href="vk.com" target="_blank">;
     </body>	
 </html>
