--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
     		</tr>	
     	</table>
     	Контакты:
-    	Официальный сайт ГБОУ Школы №141 - <a href="http://sch141s.mskobr.ru/" target="_blank">;
-    	Группа ВК - <a href="vk.com" target="_blank">;
+    	Официальный сайт ГБОУ Школы №141 - <a href="http://sch141s.mskobr.ru/" target="_blank">
     </body>	
 </html>
